--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 attrs==19.3.0
 bitstruct==8.11.0
 botocore==1.17.43
-can-decoder==0.0.1
-canedge-browser==0.0.2
+can-decoder
+canedge-browser
 canmatrix==0.9.1
 certifi==2020.6.20
 click==7.1.2
@@ -11,7 +11,7 @@ fsspec==0.8.0
 future==0.18.2
 influxdb-client==1.10.0
 jmespath==0.10.0
-mdf-iter==0.0.1
+mdf-iter
 numpy==1.19.1
 pandas==1.1.0
 pathlib2==2.3.5
