--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ bitstruct==8.11.0
 botocore==1.17.43
 can-decoder
 canedge-browser
-canmatrix==0.9.1
+canmatrix==0.9.2
 certifi==2020.6.20
 click==7.1.2
 docutils==0.15.2
-fsspec==0.8.0
+fsspec==0.8.4
 future==0.18.2
 influxdb-client==1.10.0
 jmespath==0.10.0
@@ -21,3 +21,8 @@ Rx==3.1.1
 s3fs==0.4.2
 six==1.15.0
 urllib3==1.25.10
+lxml==4.6.1
+xlsxwriter==1.3.7
+xlwt==1.3.0
+xlrd==1.2.0
+pyyaml
