--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 attrs==19.3.0
 bitstruct==8.11.0
 botocore==1.17.43
-can-decoder
+can-decoder>=0.0.4
 canedge-browser>=0.0.5
 canmatrix==0.9.2
 certifi==2020.6.20
@@ -12,8 +12,8 @@ future==0.18.2
 influxdb-client==1.10.0
 jmespath==0.10.0
 mdf-iter
-numpy==1.19.1
-pandas==1.1.0
+numpy==1.19.4
+pandas==1.1.5
 pathlib2==2.3.5
 python-dateutil==2.8.1
 pytz==2020.1
