--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 attrs==19.3.0
 bitstruct==8.11.0
 botocore==1.17.43
-can-decoder>=0.0.4
+can-decoder>=0.0.5
 canedge-browser>=0.0.5
 canmatrix==0.9.2
 certifi==2020.6.20
@@ -11,7 +11,7 @@ fsspec==0.8.4
 future==0.18.2
 influxdb-client==1.10.0
 jmespath==0.10.0
-mdf-iter
+mdf-iter>=0.0.3
 numpy==1.19.4
 pandas==1.1.5
 pathlib2==2.3.5
