--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,35 @@
-attrs==19.3.0
-bitstruct==8.11.0
-botocore==1.20.88
-can-decoder>=0.0.5
-canedge-browser>=0.0.5
-canmatrix==0.9.2
-certifi==2020.6.20
-click==7.1.2
-docutils==0.15.2
-fsspec==0.8.4
+aiobotocore==1.3.0
+aiohttp==3.7.4.post0
+aioitertools==0.7.1
+async-timeout==3.0.1
+attrs==21.2.0
+bitstruct==8.11.1
+botocore==1.20.49
+can-decoder>=0.1.0
+canedge-browser>=0.0.6
+canmatrix==0.9.1
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+fsspec==2021.5.0
 future==0.18.2
-influxdb-client==1.10.0
+idna==3.2
+importlib-metadata==4.5.0
+influxdb-client==1.18.0
 jmespath==0.10.0
-mdf-iter>=0.0.3
-numpy==1.19.4
-pandas==1.1.5
+mdf-iter>=0.0.4
+multidict==5.1.0
+numpy==1.20.3
+pandas==1.2.4
 pathlib2==2.3.5
 python-dateutil==2.8.1
-pytz==2020.1
-Rx==3.1.1
-s3fs==0.4.2
-six==1.15.0
-urllib3==1.25.10
-lxml==4.6.1
-xlsxwriter==1.3.7
-xlwt==1.3.0
-xlrd==1.2.0
-pyyaml
+pytz==2021.1
+Rx==3.2.0
+s3fs==2021.5.0
+six==1.16.0
+typing-extensions==3.10.0.0
+urllib3==1.26.5
+wrapt==1.12.1
+yarl==1.6.3
+zipp==3.4.1
