Updated requirements for FW 01.07.01 log files | updated AWS Lambda ARN layers for FW 01.07.01 and Python 3.9 | Added automated Lambda deployment/deletion scripts

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ build.bat
 *test_new.py
 *env/*
 *_test*
+*lambda_inputs_test.json*
+*deploy-aws-lambda/env/*
+*ev6-gps.dbc*
+
+*canedge-influxdb-writer.zip*
